# vml-expo

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 03_analysis.ipynb  03_analysis.py
src/: config.py  data_loader.py  feature_engineering.py  modeling.py  profiler.py  text_processor.py  validator.py
