[project]
name = "expo2020-analysis"
version = "1.0.0"
description = "Social media analysis of Expo 2020 Dubai"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=6.2.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.5",
    "nltk>=3.9.1",
    "optuna>=3.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "ipdb>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"